# openni_wrapper

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/: ColorCallback.h  DepthCallback.h
launch/: main.launch  processing.launch
openni_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml
openni_wrapper/include/: OpenniWrapperNode.h
openni_wrapper/launch/: main.launch
openni_wrapper/src/: ColorCallback.cpp  DepthCallback.cpp
src/: OpenniWrapperNode.cpp  OpenniWrapperNodelet.cpp  main.cpp
