<?xml version="1.0"?>
<package>
  <name>openni_wrapper</name>
  <version>0.0.3</version>
  <description>The openniWrapper package</description>

  <maintainer email="raambrus@kth.se">Rares Ambrus</maintainer>


  <license>Apache License Version 2.0</license>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <buildtool_depend>java</buildtool_depend>  i
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>glut</build_depend>


  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>class_loader</run_depend>
  <run_depend>libusb-1.0-dev</run_depend>
  <run_depend>glut</run_depend>


</package>
